# lipp_benchmark

./: .gitignore  CMakeLists.txt  README.md  build.sh  download.sh  run.sh
src/benchmark/: benchmark.cpp  flags.h  utils.h
src/core/: concurrency.h  lipp.h
